@@ -20,6 +20,8 @@
     <modules>
         <module>dbconstraint</module>
         <module>core</module>
+        <module>core-driver-it</module>
+        <module>core-it</module>
         <module>client-java</module>
         <module>e2e-tests</module>
         <module>experiments</module>
@@ -92,23 +94,24 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.3.61</kotlin.version>
+        <kotlin.version>1.3.72</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <junit.jupiter.version>5.6.0</junit.jupiter.version>
         <junit.platform.version>1.6.0</junit.platform.version>
         <dropwizard.version>1.3.7</dropwizard.version>
-        <swagger.version>1.6.0</swagger.version>
+        <swagger.version>1.6.1</swagger.version>
         <swagger.parser-v2.version>1.0.39</swagger.parser-v2.version>
-        <swagger.parser-v3.version>2.0.16</swagger.parser-v3.version>
+        <swagger.parser-v3.version>2.0.20</swagger.parser-v3.version>
         <springboot.version>2.2.0.RELEASE</springboot.version>
         <springfox.version>2.9.2</springfox.version>
+        <!--  upgrading this one gives issue... might have to update Spring as well -->
         <springdoc.version>1.2.21</springdoc.version>
-        <jetty.version>9.4.12.v20180830</jetty.version>
+        <jetty.version>9.4.29.v20200521</jetty.version>
         <jersey.version>2.29.1</jersey.version>
         <javax.el.version>2.2.5</javax.el.version>
-        <jackson.version>2.9.7</jackson.version>
-        <asm.version>7.2</asm.version>
-        <testcontainers.version>1.12.4</testcontainers.version>
+        <jackson.version>2.11.0</jackson.version>
+        <asm.version>8.0.1</asm.version>
+        <testcontainers.version>1.14.3</testcontainers.version>
         <antlr.version>4.7.2</antlr.version>
         <nlp.version>3.9.2</nlp.version>
         <dk.brics.automaton.version>1.11-8</dk.brics.automaton.version>
@@ -136,6 +139,7 @@
                 <artifactId>evomaster-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!--  Note: adding here also the one for  <type>test-jar</type> gives a lot of problems -->
             <dependency>
                 <groupId>org.evomaster</groupId>
                 <artifactId>evomaster-dbconstraint</artifactId>
@@ -220,7 +224,7 @@
                     We ll need to check when new version comes with fix for:
                     https://github.com/google/guice/issues/1133
                 -->
-                <version>4.2.2</version>
+                <version>4.2.3</version>
             </dependency>
             <dependency> <!-- This is needed as Guice has no LifeCycle management -->
                 <groupId>com.netflix.governator</groupId>
@@ -267,6 +271,11 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.8.6</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.7</version>
             </dependency>
             <dependency> <!-- Used to handle terminal/console inputs -->
                 <groupId>net.sf.jopt-simple</groupId>
@@ -461,6 +470,16 @@
                 <artifactId>springdoc-openapi-ui</artifactId>
                 <version>${springdoc.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-security</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-kotlin</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
 
 
             <!--
@@ -515,7 +534,7 @@
             <dependency> <!-- Used to intercept SQL commands -->
                 <groupId>p6spy</groupId>
                 <artifactId>p6spy</artifactId>
-                <version>3.6.0</version>
+                <version>3.9.0</version>
             </dependency>
             <dependency>
                 <groupId>com.github.jsqlparser</groupId>
@@ -530,7 +549,7 @@
             <dependency>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-core</artifactId>
-                <version>6.1.3</version>
+                <version>6.4.4</version>
             </dependency>
 
             <!--   XML  -->
@@ -567,7 +586,7 @@
             <dependency>
                 <groupId>io.rest-assured</groupId>
                 <artifactId>rest-assured</artifactId>
-                <version>4.1.2</version>
+                <version>4.3.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -599,6 +618,7 @@
 
                 <!-- To run unit tests -->
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M4</version>
                     <configuration>
@@ -616,7 +636,28 @@
                         <!-- Needed for some weird bug in JDK used in CircleCI-->
                         <useSystemClassLoader>false</useSystemClassLoader>
                     </configuration>
+                </plugin>
 
+                <!-- To run integration tests -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <rerunFailingTestsCount>2</rerunFailingTestsCount>
+                        <argLine>@{argLine} -Xms1024m -Xmx2048m -Djdk.attach.allowAttachSelf=true</argLine>
+                        <useSystemClassLoader>false</useSystemClassLoader>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
 
                 <!-- To compile Kotlin code -->
@@ -820,6 +861,21 @@
                         </execution>
                     </executions>
                 </plugin>
+
+                <plugin>
+                    <!-- Need to create self-executable uber/fat jars for Spring-->
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${springboot.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
             </plugins>
         </pluginManagement>
 
